--- a/templates/head.html
+++ b/templates/head.html
@@ -1,4 +1,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Han</title>
+
+    <!-- BOOTSTRAP LINK / 컨트롤 + /   -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <!-- GOOGLE FONT LINK    -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
 </head>
