--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,11 @@
-    <div style="height: 10rem; background-color: #38df81; boder-radius: 1rem; margin: 2rem;">
-
+    <div style="text-align: center; margin: 2rem 0;">
+        <div>
+            <h1 style="font-family: 'Noto Sans KR', sans-serif;">HAN</h1>
+        </div>
+        <div>
+            <span>nav1</span>
+            <span>nav2</span>
+            <span>nav3</span>
+            <span>nav4</span>
+        </div>
     </div>
