django course 11 commit

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
-    <div style="text-align: center; margin: 2rem 0;">
+    <div class="han_header">
         <div>
-            <h1 style="font-family: 'Noto Sans KR', sans-serif;">HAN</h1>
+            <h1 class="han_logo">HAN</h1>
         </div>
         <div>
             <span>nav1</span>
