--- a/templates/head.html
+++ b/templates/head.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 <head>
     <meta charset="UTF-8">
     <title>Han</title>
@@ -9,4 +12,8 @@
     <!-- GOOGLE FONT LINK    -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
+
+    <!-- DEFAULT CSS LINK   -->
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
+
 </head>
