--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -1,20 +1,20 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block content %}
 
-    <div style="text-align: center">
+    <div style="text-align: center; max-width: 500px; margin: 4rem auto">
         <div>
             <h4>Login</h4>
         </div>
         <div>
             <form action="" method="post">
                 {% csrf_token %}
-                {{ form }}
-                <input type="submit" class="btn btn-primary">
+                {% bootstrap_form form %}
+                <input type="submit" class="btn btn-dark col-6 mt-3 ">
             </form>
         </div>
     </div>
 
 {% endblock %}
 
-<!-- next / login_redirect_url / default -->
