--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -11,8 +11,17 @@
             <h2>
                 {{ target_user.username }}
             </h2>
-        </div>
 
+            {% if target_user == user %}
+            <a href="{% url 'accountapp:update' pk=user.pk %}">
+                <p>
+                Change Info
+                </p>
+            </a>
+            {% endif %}
+
+
+        </div>
     </div>
 
 {% endblock %}
