--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -9,7 +9,7 @@
             <h4>Change Info</h4>
         </div>
 
-        <form action="{% url 'accountapp:update' pk=user.pk %}" method="post">
+        <form action="{% url 'accountapp:update' pk=target_user %}" method="post">
             {% csrf_token %}
             {% bootstrap_form form %}
             <input type="submit" class="btn btn-dark col-6 mt-3">
