--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
 
     <div>
@@ -8,9 +7,18 @@
             <p>
                 {{ target_user.date_joined }}
             </p>
+
+            {% if target_user.profile %}
             <h2>
-                {{ target_user.username }}
+                {{ target_user.profile.nickname }}
             </h2>
+            {% else %}
+            <a href="{% url 'profileapp:create' %}">
+                <p>
+                Create Profile
+                </p>
+            </a>
+            {% endif %}
 
             {% if target_user == user %}
             <a href="{% url 'accountapp:update' pk=user.pk %}">
@@ -22,9 +30,7 @@
                 <p>
                 Quit
                 </p>
-            </a>
-            {% endif %}
-
+            </a>{% endif %}
 
         </div>
     </div>
