--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -36,7 +36,7 @@
             <img src="https://picsum.photos/200/500" alt="">
         </div>
         <div class="item5">
-            <img src="https://picsum.photos/200/600" alt="">
+            <img src="https://picsum.photos/200/300" alt="">
         </div>
         <div class="item6">
             <img src="https://picsum.photos/200/300" alt="">
@@ -45,7 +45,7 @@
             <img src="https://picsum.photos/200/300" alt="">
         </div>
         <div class="item8">
-            <img src="https://picsum.photos/200/500" alt="">
+            <img src="https://picsum.photos/200/200" alt="">
         </div>
         <div class="item9">
             <img src="https://picsum.photos/200/400" alt="">
@@ -57,11 +57,17 @@
             <img src="https://picsum.photos/200/300" alt="">
         </div>
         <div class="item12">
-            <img src="https://picsum.photos/200/500" alt="">
+            <img src="https://picsum.photos/200/200" alt="">
         </div>
         <div class="item13">
             <img src="https://picsum.photos/200/300" alt="">
         </div>
+    </div>
+
+    <div style="text-align: center; margin: 4rem auto;">
+        <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+            Create Article
+        </a>
     </div>
 
     <script src="{% static 'js/magicgrid.js' %}"></script>
