--- a/static/base.css
+++ b/static/base.css
@@ -30,3 +30,23 @@
         font-size: 13px;
     }
 }
+
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+
+a:hover {
+    color: black;
+    text-decoration: none;
+}
+
+.han_header_nav {
+    margin: 0 0.5rem;
+}
+
+.han_header_navbar {
+    margin: 1rem 0;
+}
