--- a/templates/head.html
+++ b/templates/head.html
@@ -15,6 +15,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
 
+    <!--  GOOGLE MATERIAL ICONS  -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+
+
     <!-- DEFAULT CSS LINK   -->
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 
