--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
             <a href="{% url 'projectapp:list' %}" class="han_header_nav">
                 <span>Projects</span>
             </a>
-            <a href="{% url 'subscribeapp:list' %}" class="han_header_nav">
+            <a href="{% url 'subscribeapp:list' %}" class="hanç_header_nav">
                 <span>Subscription</span>
             </a>
             {% if not user.is_authenticated %}
